2011-11-19  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* takaxp-frame-control.el: Add a new functions
	`(move-frame-to-edge-top)' and `(move-frame-to-edge-bottom)'
	to control the position of frame by <f1>/S-<f1> key.
	(auto-move-frame-to-center): Change the default value to nil

	* takaxp-utility.el :
	Add a speech for warning your lazy by Kyoko (only for Macintosh)
	Add a hook to start up with displaying *scratch* buffer
	Add `org2dokuwiki-cp-kill-ring' to copy a converted buffer by single action
	Change the logic to insert `  - ' at the the head of line.

	* takaxp-face.el:
	Remove config. for popwin.el (see `takaxp-frame-control.el').
	Disable cursor blink

	* takaxp-init.el: Add setting for Cycle-buffer.el

2011-11-05  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* takaxp-frame-control.el: A new elisp to control frame position and size
	Depends on e2wm.el and frame-cmds.el.

	* takaxp-utility.el:
	Remove some functions a new elisp file `takaxp-frame-control.el'.

	* takaxp-face.el (input-methoad-activate-hook):
	Use `input-method-active-hook' and `input-method-inactivate-hook'
	instead of `mac-set-input-method-parameter'.
	Remove config. for e2wm.el (see `takaxp-frame-control.el').

	* takaxp-keybinding.el : Replace method and change key assign
	Replace `toggle-single-wide-frame' to `change-frame-width-single'.
	Replace `toggle-double-wide-frame' to `change-frame-width-double'.
	Replace `my-move-frame-left' to `move-frame-left' with frame-cmds.el
	Replace `my-move-frame-right' to `move-frame-right' with frame-cmds.el
	Change `(kbd "M-;")' to `(kbd "M-'")'.
	Change `(kbd "M-[")' to `(kbd "M-]")'.

	* takaxp-init.el: Disable auto start of M-x zone.

2011-10-30  Takaaki ISHIKAWA  <takaxp@ieee.org>

	* .emacs.d/takaxp-utility.el (toggle-single-wide-frame):
	Change functions to use e2wm with two perspective
	toggle-single-wide-frame: set default size without e2wm.
	toggle-double-wide-frame: set frame double size, and e2wm.

2011-10-30  Takaaki ISHIKAWA  <takaxp@ieee.org>
