@@ -1,3 +1,8 @@
+#+TITLE:	My Emacs Configuration
+#+AUTHOR:	Takaaki Ishikawa
+#+EMAIL:	takaxp@ieee.org
+
+* Introduction
 This git repository stores files of configurations for Emacs 23
 The author is Takaaki ISHIKAWA <takaxp@ieee.org>
 
@@ -16,14 +21,16 @@ Write the following emacs lisp files in your .emacs
 (require 'takaxp-keybinding)
 ------------------------
 
-  - STRUCTURE
-./.emacs		  [ OPEN ] Startup configuration file
+* Structure
+
+./.emacs		          [ OPEN ] Startup configuration file
+./play-ground.el	      [CLOSED] Testing area
 ./takaxp-init.el          [ OPEN ] Core configurations for using Emacs
-./takaxp-face.el	  [ OPEN ] Font, Face, and frame display settings
+./takaxp-face.el	      [ OPEN ] Font, Face, and frame display settings
 ./takaxp-utility.el       [ OPEN ] Defines functions for using Emacs more handy
 ./takaxp-org-mode.el      [ OPEN ] Configurations for Org-mode
 ./takaxp-mac.el           [ OPEN ] Configurations only for Macintosh
-./takaxp-private.el	  [CLOSED] Setting with private variable values
+./takaxp-private.el	      [CLOSED] Setting with private variable values
 ./takaxp-keybinding.el    [ OPEN ] Global settings of keybindings
 ./takaxp-frame-control.el [ OPEN ] Control frame size and position
 	
