@@ -1,3 +1,9 @@
+2011-12-23  Takaaki ISHIKAWA  <takaxp@ieee.org>
+
+	* takaxp-init.el: Add settings for doxymacs, i-search, and wclock
+
+	* takaxp-org-mode.el: Add settings for org-tree-slide.el
+
 2011-11-19  Takaaki ISHIKAWA  <takaxp@ieee.org>
 
 	* takaxp-frame-control.el: Add a new functions
